force-app/main/default/objects/Solution_Component__c/Solution_Component__c.object-meta.xml
<CustomObject>
    <label>Solution Component</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Solution Component No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>