force-app/main/default/objects/Solution_Component__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which component is part of this related Solution?</description>
    <inlineHelpText>Which component is part of this related Solution?</inlineHelpText>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Solution Components</relationshipLabel>
    <relationshipName>Solution_Components</relationshipName>
    <type>Lookup</type>
</CustomField>