force-app/main/default/objects/Solution_Component__c/fields/Component_Version__c.field-meta.xml
<CustomField>
    <fullName>Component_Version__c</fullName>
    <description>Which component version is part of this related Solution?</description>
    <inlineHelpText>Which component version is part of this related Solution?</inlineHelpText>
    <label>Component Version</label>
    <referenceTo>Component_Version__c</referenceTo>
    <relationshipLabel>Solution Components</relationshipLabel>
    <relationshipName>Solution_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>