force-app/main/default/objects/Solution_Component__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which solution does this component relate to?</description>
    <inlineHelpText>Which solution does this component relate to?</inlineHelpText>
    <label>Solution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipLabel>Solution Components</relationshipLabel>
    <relationshipName>Solution_Components</relationshipName>
    <type>Lookup</type>
</CustomField>