force-app/main/default/objects/Solution_Component__c/fields/Solution_Option__c.field-meta.xml
<CustomField>
    <fullName>Solution_Option__c</fullName>
    <description>Which solution option does this component relate to?</description>
    <inlineHelpText>Which solution option does this component relate to?</inlineHelpText>
    <label>Solution Option</label>
    <referenceTo>Solution_Option__c</referenceTo>
    <relationshipLabel>Solution Components</relationshipLabel>
    <relationshipName>Solution_Components</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>